finished the spam filter

--- a/Uncertainty/Naive_Bayes_classifier.ipynb
+++ b/Uncertainty/Naive_Bayes_classifier.ipynb
@@ -1610,7 +1610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some messages are incorrectly classified but by a very small difference. For example, messages 270, 366, 722 are all down to the last decimal place. These messages contain many neutral words that have similar probabilities in both spam and ham. Another potential reason that these messages are incorrectly classified is because the classifier does not take into account words that it has not seen before. Third potential reason is that the classifier does not take into account the order of the words and therefore cannot get a sense of context."
+    "Some messages are incorrectly classified but by a very small difference. For example, messages 270, 366, 722 are all down to the last decimal place. To avoid the classifier making a decision when it is actually unsure about the outcome, we can add a logic so that the classifier only \"flags\" the message when the difference is less than 0.01 (for example). Another potential reason that these messages are incorrectly classified is because the classifier does not take into account words that it has not seen before. As of now, we are simply ignoring these words while in reality, they may have significant impact on determing whether a message is spam or not. Third potential reason is that the classifier does not take into account the order of the words and therefore cannot get a sense of context. Lastly, some spam messages may also contain some words that have high probabilities of being ham to intentionally confuse the classifier, causing it to make the wrong judgement."
    ]
   },
   {
@@ -1633,18 +1633,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I would use TF-IDF to imporve the classifier. TF-IDF stands for term frequency-inverse document frequency. It effectively diminishes the impact of words that occur a lot. For example, if the word \"like\" appears in almost every message, the classifier would treat it as less influencial than words that do not appear as frequent.\n",
-    "Also, if the probability of a word being spam verse being ham is very close, we can flag the message instead of labeling it as spam. Filtering termsmtime of the message, contact, length of spam messages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "for each word:<br>\n",
-    "    TF = number of occurences of a word given the message is spam<br>\n",
-    "    IDF = log(total number of messages / total number of message containing the word)<br>\n",
-    "    p(word|spam) = (TF * IDF) / (sum of all words' TF * IDF) <br>"
+    "As mentioned above, one way that we can improve the classifier is flagging messages instead of labling them if the difference of the probabilities of its being spam versus being ham is very small. \n",
+    "In practice, for text messages, we can take into account the time of the message being sent, whether the sender is a contact of the user, and the length of these messages to better determine if the messages are spam or not spam.\n",
+    "Lastly, we can also take into account non-letter characters. As of now, they are ignored by the classifier; however, in practice, we can easily spot if a message is spam by looking for unusual characters and symbols. Therefore, we can make numbers and symbols a feature and use that feature to better determine if a message is spam or or not spam."
    ]
   },
   {
